[tool.poetry]
name = "pgbackend"
version = "0.1.0"
description = "Django database backend for psycopg3"
authors = ["pwtail <abvit89s@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pgbackend" },
]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["pool"], version = "^3.1.4"}
httpx = "^0.23.0"
channels = "^4.0.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}

[tool.poetry.group.dev.dependencies]
django = {path = "/home/pwtail/sof/godjan"}
greenhack = {path = "/home/pwtail/sof/ghack"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
